--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-9.10MB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
-  - {name: 🇨🇳 中国-796.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-383.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 卢森堡-8.68MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.10MB/s(Youtube:不良林), server: 150.230.197.142, port: 44634, type: vmess, uuid: c2d05105-857a-4c94-be34-5534e7e8285f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.95MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-546.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-152.1KB/s(Youtube:不良林), server: 51.79.173.62, port: 1443, type: ss, cipher: aes-256-cfb, password: edGQaxoQhk}
+  - {name: 🇨🇳 中国-908.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-2.22MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-3.50MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-9.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
-      - 卢森堡-8.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
