--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-546.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-503.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇸🇬 新加坡-152.1KB/s(Youtube:不良林), server: 51.79.173.62, port: 1443, type: ss, cipher: aes-256-cfb, password: edGQaxoQhk}
-  - {name: 🇨🇳 中国-908.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-2.22MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-3.50MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-260.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-18.03MB/s(Youtube:不良林), server: zf1.333210.xyz, port: 40383, type: vmess, uuid: 04e1a3ce-9921-40db-a9eb-9f754491e111, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /bby, ws-headers: {Host: zf1.333210.xyz}}
+  - {name: 🇨🇳 中国-503.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇨🇳 中国-368.5KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-336.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-399.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-360.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-546.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
